--- a/files/default/hopsworks_templates/config_template.json
+++ b/files/default/hopsworks_templates/config_template.json
@@ -50,6 +50,7 @@
     "executorCores": ${conf.executorCores?c},
     "executorMemory": "${conf.executorMemory}",
     "proxyUser": "${conf.hdfsUser}",
+    "name": "${conf.livySessionName}",
     "queue": "${conf.yarnQueue}",
     "conf": {
 ${conf.sparkConfiguration}
